# ContourPlugin

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: contourmethod.h
lib/src/: contourmethod.cpp
test/: CMakeLists.txt
test/src/: main.cpp
